# tree_condenser_stamp

./: .gitignore  CONTRACT_TRACEABILITY.md  CONTRIBUTING_COARSENERS.md  DOCS_OVERVIEW.md  MANIFEST.in  README.md  REPO_CONTENTS.md  pyproject.toml
audit/: AUTHORING_AND_GENERIC_PERFORMANCE.md  BPE_PARITY_AND_PERFORMANCE.md  BPE_PROTECTED_BASELINE.sha256  FROZEN_SCHEMA.sha256  PARAMETRIC_STAR_BATCHING.md  REAUDIT_2026-06-20.md  RELEASE_AUDIT.md  SCHEMA_CLARIFICATIONS.md  bpe_schema1_benchmark_current.json  bpe_schema1_default_validation_benchmark.json  bpe_v0121_benchmark_old.json  bpe_v0121_default_validation_benchmark.json  edge_bpe_numba_v0121_protected.py  edge_bpe_v0121_protected.py  named_cross_generation_benchmark.json  parametric_star_batching_benchmark.json  parametric_star_cross_generation_benchmark.json  parametric_star_many_rules_benchmark.json  run_notebooks.py
benchmarks/: README.md  benchmark_common.py  benchmark_edge_bpe_numba.py  benchmark_named_cross_generation.py  benchmark_parametric_star_batching.py  benchmark_parametric_star_cross_generation.py  benchmark_parametric_star_many_rules.py  coarsener_scaling_sweep.ipynb  edge_bpe_timing_sweep.ipynb  two_stage_pipeline_sweep.ipynb
docs/: edge_bpe_numba_experiment.md  parametric_star_coarsener.md  star_coarsener.md  tree_coarsening_api.md
experiments/: CARBANAK_process_trees_light.ipynb  CARBANAK_simple_train_test_expt.ipynb  CARBANAK_simpler_process_tree_creation.ipynb  CARBANAK_star_edge_bpe_experiment.ipynb  README.md  VIBECODED_CARBANAK_RUN_FIRST_prep.ipynb  information_diagnostics.py  (+1 more)
(+46 files in other folders)
